--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -31,3 +31,23 @@ summary(Boardgame)
 This is a basic summary of the dataset. 
 The distribution of integer and numberical variables, such as `max_playtime` and `min_players` are demonstrated with the 5-number summary and the mean. 
 For character variables, only length (which is the same as the number of observations), class, and mode (both of these show the data type) are present.
+
+# Research Questions
+
+There are two research questions for this dataset: 
+1) Is there a relationship between `average_rating` and `average_playtime`. 
+      **Variables Needed**
+        - `average_rating`
+        - `average_playtime`
+      **Methodology** 
+        Create a new variable averate_playtime using `mutate` with `max_playtime` and `min_playtime`. Then, create a scatterplot to visualize this data. 
+2) Between play time, number of users rated, and max players, what has the most impact on average rating? 
+      **Variables Needed**
+        - `max_playtime`
+        - `min_playtime`
+        - `users_rated`
+        - `max_players`
+        - `min_players`
+        - `average_rating`
+      **Methodology** 
+        Use ggplot and faceting functions to create box plots to plot the relationship between all the variables and average_rating. 
