--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -5,10 +5,22 @@ date: "5-1-24"
 format: pdf
 ---
 
-# Data Exploration 
-## Data Structure 
+# Set Up
+```{r import}
+pacman::p_load(tidyverse, stringr, RColorBrewer)
+```
+# Import Dataset
+
 ```{r}
-str(Boardgame)
+board_games_data_raw <- read.csv("./board_games.csv")
+head(board_games_data_raw)
+```
+#Exploration of Dataset
+
+## Structure of Data Set
+```{r}
+str(board_games_data_raw
+
 ```
 There are a total of **10523** observations, each representing a different board game.
 The dataset consists of **22** variables, which includes the types integer, string, and numerical. 
@@ -16,15 +28,25 @@ The integer variables are: `game_id`, `max_players`, `max_playtime`, `min_age`, 
 The character variables are: `description`, `image`, `name`, `thumbnail`, `artist`, `category`, `compilation`,``designer`, `expansion`, `family`, `mechanic`, and `publisher`. 
 The only numerical variable is `average_rating`. 
 More information on variables can be seen in the `Variable List` 
-## Data Summary 
+
+## Summary of Data Set
 ```{r}
-summary(Boardgame)
+
+summary(board_games_data_raw)
+
 ```
 This is a basic summary of the dataset. 
 The distribution of integer and numberical variables, such as `max_playtime` and `min_players` are demonstrated with the 5-number summary and the mean. 
 For character variables, only length (which is the same as the number of observations), class, and mode (both of these show the data type) are present.
+# Data Dictionary 
+This is the data dictionary for this dataset
+```{r}
+data_dictionary <- read.csv("./board_games.csv")
 
+
+```
 # Research Questions
+
 There are two research questions for this dataset: 
 1) Is there a relationship between `average_rating` and `average_playtime`. 
       **Variables Needed**
