--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -9,58 +9,108 @@ format: pdf
 ```{r import}
 pacman::p_load(tidyverse, stringr, RColorBrewer)
 ```
-# Import Dataset
 
+# Import Dataset
+We are using the board games data from tidytuesday in 2019. The data comes from the Board Games Geek database which allows users to rates board games. The data spans from 1950 to 2016 with games that have at least 50 ratings. 
 ```{r}
 board_games_data_raw <- read.csv("./board_games.csv")
 head(board_games_data_raw)
 ```
+
 #Exploration of Dataset
-
-## Structure of Data Set
+First we need to have an overview of the data set as a basis of further analysis. 
 ```{r}
-str(board_games_data_raw
-
-```
-There are a total of **10523** observations, each representing a different board game.
-The dataset consists of **22** variables, which includes the types integer, string, and numerical. 
-The integer variables are: `game_id`, `max_players`, `max_playtime`, `min_age`, ` min_players`, `min_playtime`, `playing_time`, `year_published`, and `users_rated`.
-The character variables are: `description`, `image`, `name`, `thumbnail`, `artist`, `category`, `compilation`,``designer`, `expansion`, `family`, `mechanic`, and `publisher`. 
-The only numerical variable is `average_rating`. 
-More information on variables can be seen in the `Variable List` 
-
-## Summary of Data Set
-```{r}
-
 summary(board_games_data_raw)
-
 ```
-This is a basic summary of the dataset. 
-The distribution of integer and numberical variables, such as `max_playtime` and `min_players` are demonstrated with the 5-number summary and the mean. 
-For character variables, only length (which is the same as the number of observations), class, and mode (both of these show the data type) are present.
+descirption of the board game summary goes here
+
 # Data Dictionary 
-This is the data dictionary for this dataset
-```{r}
-data_dictionary <- read.csv("./board_games.csv")
+This is the data dictionary for this data set
+## Variable List
 
+-   game_id = unique board game ID Number
 
-```
+    -   Data Type = Integer
+
+-   description = short description of the game
+
+    -   Data Type = String
+
+-   max_players = the largest amount of players that can play the board game at a certain time
+
+    -   Data Type - Integer
+
+-   max_playtime = the longest estimated amount of time that it will take for people to finish playing the game. This is written in minutes
+
+    -   Data Type = Integer
+
+-   min_age = the minimum age a person needs to be in order to play the board game
+
+    -   Data Type = Integer
+
+-   min_players = the minimum amount of people that can play the board game at a certain time
+
+    -   Data Type = Integer
+
+-   min_playtime = the shortest estimated amount of time that it will take for people to finish playing the game. This is written in minutes.
+
+    -   Data Type = Integer
+
+-   name = the name of the board game
+
+    -   Data Type = String
+
+-   playing_time = the estimated average amount of time that it will take for people to finish playing the game. This is written in minutes
+
+    -   Data Type = Integer
+
+-   year_published = the year that the game was published
+
+    -   Data Type = Integer
+
+-   category = this is a string that says what categories each board game belongs to. If a board game has multiple categories all of them will be written down and will be separated by commas
+
+    -   Data Type = String
+
+-   compilation = if the game is part of a multi-game compilation is lists what compilation it is apart of
+
+    -   Data Type = String
+
+-   designer = this is the name of the person or people that designed the game. If there are multiple people that designed a game their names are split by commas in between each name
+
+    -   Data Type = String
+
+-   expansion = if the game has an expansion pack this variable has the name of the expansion pack. If the game has multiple expansion packs each expansion pack is split by commas. 
+
+    -   Data Type = String
+
+-   mechanic = this explains how the game is played and what the game uses to work. If a game uses multiple elements to run the elements are split by commas
+
+    -   Data Type = String
+
+-   publisher = this is the company or people that published the game. If a game has multiple publishers then the publishers are split by commas
+
+    -   Data Type = String
+
+-   average_rating = this is the average rating of the game on Board Game Geek. The rating system runs on a scale from 1 to 10
+
+    -   Data Type = Double
+
+-   users_rated = This is the number of user that rated the game on Board Game Geek.
+
+    -   Data Type = Integer
+
 # Research Questions
 
-There are two research questions for this dataset: 
-1) Is there a relationship between `average_rating` and `average_playtime`. 
-      **Variables Needed**
-        - `average_rating`
-        - `average_playtime`
-      **Methodology** 
-        Create a new variable averate_playtime using `mutate` with `max_playtime` and `min_playtime`. Then, create a scatterplot to visualize this data. 
-2) Between play time, number of users rated, and max players, what has the most impact on average rating? 
-      **Variables Needed**
-        - `max_playtime`
-        - `min_playtime`
-        - `users_rated`
-        - `max_players`
-        - `min_players`
-        - `average_rating`
-      **Methodology** 
-        Use ggplot and faceting functions to create box plots to plot the relationship between all the variables and average_rating. 
+
+# Cleaning Methods
+
+# Data Cleaning
+
+# Data Visualization
+## Research Question 1
+
+## Research Question 2
+
+
+# Conclusion
