--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -17,12 +17,25 @@ board_games_data_raw <- read.csv("./board_games.csv")
 head(board_games_data_raw)
 ```
 
-#Exploration of Dataset
+# Data Exploration
 First we need to have an overview of the data set as a basis of further analysis. 
+## Data Structure
+
 ```{r}
-summary(board_games_data_raw)
+board_games_data <- read.csv("./board_games.csv")
+str(board_games_data)
 ```
-descirption of the board game summary goes here
+
+There are a total of 10523 observations, each representing a different board game. The dataset consists of 22 variables, which includes the types integer, string, and numerical. The integer variables are: game_id, max_players, max_playtime, min_age, min_players, min_playtime, playing_time, year_published, and users_rated. The character variables are: description, image, name, thumbnail, artist, category, compilation,‘designer, expansion, family, mechanic, and publisher. The only numerical variable is average_rating. More information on variables can be seen in the Variable List
+
+## Data Summary
+
+```{r}
+summary(board_games_data)
+```
+
+This is a basic summary of the dataset. The distribution of integer and numberical variables, such as max_playtime and min_players are demonstrated with the 5-number summary and the mean. For character variables, only length (which is the same as the number of observations), class, and mode (both of these show the data type) are present.
+
 
 # Data Dictionary 
 This is the data dictionary for this data set
