--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -54,6 +54,26 @@ summary(board_games_data)
 
 This is a basic summary of the dataset. The distribution of integer and numberical variables, such as max_playtime and min_players are demonstrated with the 5-number summary and the mean. For character variables, only length (which is the same as the number of observations), class, and mode (both of these show the data type) are present.
 
+Although it is an numerical variable, `game_id` does not provide any relevant statistical information, as it is only used for identifying a game. 
+
+According to this summary, values for `max_players` tend to be under 10 with a median of 4 and a mean of 5.657, which are realistic numbers for a game, and an outlying max of 999. 
+
+Meanwhile `max_playtime` have a median of 45, a mean of 91.34, and and on outlier max of 60000 (the possible reason why the mean is so much higher than the median). 
+
+For `min_age`, the median is 10 and the mean is 9.715. Curiously, the max is 42, which could be a potential error. 
+
+`min_players` have a median of 2, a mean of 2.071, and a max of 9. 
+
+`min_playtime` have a median of 45 and a mean of 80.88. It also has a max of 60000, which again is likely an error as it is not a realistic minimum playtime. 
+
+`playing_time` have a median of 45, a mean of 91.34, and a max of 60000. 
+
+`year_plushed` have a median of 2007, a mean of 2003, and a max of 2016. This means that the most recent game in the dataset is published in 2016. 
+
+`average_rating` have a median of 6.393 and a mean of 6.371. 
+
+`users_rated` have a median of 176 and a mean of 870. It also has a significantly large max of 67655. 
+
 
 # Data Dictionary 
 This is the data dictionary for this data set
