--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -171,6 +171,13 @@ To answer the questions of our research, we need to perform the following cleani
 # remove `image` and `thumbnail` columns
 board_games <- board_games_data_raw |> 
   select(-c("image", "thumbnail"))
+#make a new column called decade_published to store date time objects
+board_games$decade_published = c(as.Date(as.character(board_games_data_raw$year_published), format = "%Y"))
+board_games <- board_games_data_cleaned%>%
+  mutate(decade_published = floor_date(decade_published, years(10)))
+#use floor_date to set to decade
+
+
 
 ```
 
