--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -187,6 +187,15 @@ board_games$decade_published = c(as.Date(as.character(board_games_data_raw$year_
 board_games <- board_games%>%
   mutate(decade_published = floor_date(decade_published, years(10)))
 #use floor_date to set to decade
+#make a new category to hold the primary category
+board_games$primary_category = c(board_games$category)
+#under assumption that first category listed is the primary category
+board_games <- board_games%>%
+  mutate(primary_category = str_split(category, ",") %>% 
+           #use split to make a list for each column of all the categories
+           map_chr(~ trimws(.x[1])))
+          # iterate over each element of the list column (.x) and extract the first element ([1])
+          #trimws is used to remove any white space
 
 
 
