--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -165,7 +165,6 @@ To answer the questions of our research, we need to perform the following cleani
 7. Use `lubridate` to change `year` variable to a date
 
 # Data Cleaning
-
 ```{r}
 # remove `image` and `thumbnail` columns
 board_games <- board_games_data_raw |> 
@@ -190,7 +189,7 @@ board_games <- board_games |>
   mutate(max_players = replace(max_players, max_players == 999, NA))
 
 # Identify how many `NA` values are in each column 
-ShowNA <- map_df(Boardgame1, ~ tibble(columns = names(.), na_count = sum(is.na(.))), .id = "variables/column name")
+ShowNA <- map_df(board_games, ~ tibble(columns = names(.), na_count = sum(is.na(.))), .id = "variables/column name")
 
 #make a new column called decade_published to store date time objects
 board_games$decade_published = c(as.Date(as.character(board_games_data_raw$year_published), format = "%Y"))
@@ -210,7 +209,6 @@ board_games <- board_games%>%
           # iterate over each element of the list column (.x) and extract the first element ([1])
           #trimws is used to remove any white space
 ```
-
 # Data Visualization
 ## Research Question 1
 
