--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -160,7 +160,7 @@ To answer the questions of our research, we need to perform the following cleani
 2. Recode `compilation` and `expansion` values to yes or no
 3. Recode `max_players` of `999` to `NA`
 4. Identify how many `NA` values are in each column
-5. Split `category` data by commas to get primary category by/using ______
+5. Split `category` data by commas to get primary category by/using str_split
 6. Change `primary_category` variable from character to a factor
 7. Use `lubridate` to change `year` variable to a date
 
@@ -208,6 +208,9 @@ board_games <- board_games%>%
            map_chr(~ trimws(.x[1])))
           # iterate over each element of the list column (.x) and extract the first element ([1])
           #trimws is used to remove any white space
+#turn primary_characor column into a factor
+primary_charactor_factor <- as.factor(board_games$primary_category)
+print(unique(primary_charactor_factor))
 ```
 # Data Visualization
 ## Research Question 1
