--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -36,7 +36,7 @@ First we need to have an overview of the data set as a basis of further analysis
 
 ```{r}
 
-str(board_games_data)
+str(board_games_data_raw)
 
 ```
 
@@ -46,7 +46,7 @@ There are a total of 10523 observations, each representing a different board gam
 
 ```{r}
 
-summary(board_games_data)
+summary(board_games_data_raw)
 
 ```
 
