--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -149,7 +149,7 @@ This is the data dictionary for this data set
 
 # Research Questions
 
-The research questions we intend to answer are **for each decade what primary game category had the highest user rating** and **between `average_playtime`, number of users rated, and `max_players` which has the greatest correlation with average rating**. To answer the first question, we will assume that the first category listed in `category` is the primary game category. We will create a new variable called `primary_category` that stores the split category column. We use `lubridate` to change `year_published` into datetime object with January 1st as the default date. Then we'll use `floor_date()` to find what decade each game was released in. To answer our second question, ___________ 
+The research questions we intend to answer are: **for each decade, what primary game category had the highest user rating** and **between `average_playtime`, number of `users_rated`, and `max_players` which has the greatest correlation with average rating**. To answer the first question, we will assume that the first category listed in `category` is the primary game category. We will create a new variable called `primary_category` that stores the split category column. We use `lubridate` to change `year_published` into a datetime object, with January 1st as the default date. Then we'll use `floor_date()` to find what decade each game was released in. To answer our second question, we'll create three scatterplots and compare the relationships and correlation strength.
 
 # Cleaning Methods
 
@@ -163,7 +163,7 @@ To answer the questions of our research, we need to perform the following cleani
 
 4.  Identify how many `NA` values are in each column
 
-5.  Use `lubridate` to change `year` variable to date and create a `decade_published` variable
+5.  Use `lubridate` to change `year_published` variable to date and create a `decade_published` variable
 
 6.  Split `category` data by commas to get the primary category by using `str_split()`
 
